# rust-web-api

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs
src/auth/: jwt.rs
src/models/: user.rs
